external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/named_struct_autocomplete.ide.exp
warning[W09008]: unused function
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:11:9
   │
11 │     fun foo() {
   │         ^^^ The non-'public', non-'entry' function 'foo' is never called. Consider removing it.
   │
   = This warning can be suppressed with '#[allow(unused_function)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:13:23
   │
13 │         let _tmp1 = _s.;
   │                       ^ Autocompletes to: 'a'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:13:24
   │
13 │         let _tmp1 = _s.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:14:24
   │
14 │         let _tmp2 = _s.a.;
   │                        ^ Autocompletes to: 'x'

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:14:25
   │
14 │         let _tmp2 = _s.a.;
   │                         ^ Autocompletes to: 'x'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/named_struct_autocomplete.move:14:26
   │
14 │         let _tmp2 = _s.a.;
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number

